--- a/_scss/utils/_variables.scss
+++ b/_scss/utils/_variables.scss
@@ -35,4 +35,7 @@ $youtube_color:               hsla(0, 100%, 60%, 1);      // #ff3333
 $pinterest_color:             hsla(0, 78%, 45%, 1);       // #ce1a19
 $instagram_color:             hsla(208, 46%, 41%, 1);     // #396d9a
 
-$icon-size:                   32px; 
+$icon-size:                   32px;
+
+$z-index-base:                500;
+$z-index-overlay:             700;
