--- a/bcg/static/css/main.css
+++ b/bcg/static/css/main.css
@@ -6562,6 +6562,22 @@ a.logo svg:hover {
   width: 32px;
 }
 
+.artboard__actionable-item--background-upload svg.icon-camera {
+  fill: rgba(255, 255, 255, 0.7);
+}
+
+.artboard__actionable-item--background-upload:hover {
+  cursor: pointer;
+}
+
+.artboard__actionable-item--background-upload:hover svg.icon-camera {
+  fill: white;
+}
+
+.artboard__actionable-item--cutouts:hover {
+  cursor: pointer;
+}
+
 .artboard__title {
   height: 100%;
   width: auto;
@@ -6649,12 +6665,21 @@ a.logo svg:hover {
 }
 
 .modal--cutouts-selector__option {
+  display: inline-block;
   max-width: 50px;
-  opacity: 0.7;
+  opacity: 0.5;
+  border: 1px solid transparent;
+  padding: 0.25rem;
+}
+
+.modal--cutouts-selector__option--selected {
+  border: 1px solid #818a91;
+  border-radius: 0.25rem;
+  opacity: .7;
 }
 
 .modal--cutouts-selector__option:hover {
-  opacity: 1;
+  opacity: .7;
   cursor: pointer;
 }
 
