--- a/bcg/templates/home.html
+++ b/bcg/templates/home.html
@@ -1,3 +1,4 @@
+{% load cloudinary %}
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
@@ -44,14 +45,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.2/js/tether.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
   <script src="{% static 'js/vendor/jquery.inline-edit.js' %}"></script>
-  <script src="{% static 'js/vendor/fileuploader/jquery.ui.widget.js' %}"></script>
-  <script src="{% static 'js/vendor/fileuploader/jquery.iframe-transport.js' %}"></script>
-  <script src="{% static 'js/vendor/fileuploader/jquery.fileupload.js' %}"></script>
+  {% cloudinary_includes %}
+  {% cloudinary_js_config %}
+
+
   <script src="{% static 'js/ui.js' %}"></script>
-  <script src="{% static 'js/dropzone.js' %}"></script>
 </head>
 <body>
   <div class="corner-ribbon">Continue to website &rarr;</div>
+
   <header class="masthead">
     <div class="container">
       <div class="row p-y-1">
@@ -121,7 +123,15 @@
           <div class="modal-body p-a-1">
             <div class="container-fluid">
               <div class="row">
+                <div id='direct_upload'>
+                  <form action="{% url 'direct_upload_complete' %}" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {% cloudinary_direct_upload_field request=request %}
+                  </form>
+                </div>
+
                 <span class="dropzone">
+
                   <span>Drag image here or click to upload</span>
                   <!-- The file input field used as target for the file upload widget -->
                   <input id="fileupload" type="file" name="files[]" multiple>
@@ -172,6 +182,8 @@
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+
+  <script src="{% static 'js/dropzone.js' %}"></script>
 
   </body>
 </html>
