--- a/bcg/static/css/main.css
+++ b/bcg/static/css/main.css
@@ -4642,53 +4642,66 @@ a.label:focus, a.label:hover {
 }
 
 .progress[value] {
-  color: #0074d9;
+  background-color: #f5f5f5;
   border: 0;
   appearance: none;
-}
-
-.progress[value]::-webkit-progress-bar {
-  background-color: #eee;
   border-radius: 0.25rem;
 }
 
-.progress[value]::-webkit-progress-value::before {
-  content: attr(value);
+.progress[value]::-ms-fill {
+  background-color: #fff;
+  border: 0;
+}
+
+.progress[value]::-moz-progress-bar {
+  background-color: #fff;
+  border-bottom-left-radius: 0.25rem;
+  border-top-left-radius: 0.25rem;
 }
 
 .progress[value]::-webkit-progress-value {
-  background-color: #0074d9;
-  border-top-left-radius: 0.25rem;
+  background-color: #fff;
   border-bottom-left-radius: 0.25rem;
+  border-top-left-radius: 0.25rem;
+}
+
+.progress[value="100"]::-moz-progress-bar {
+  border-bottom-right-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
 }
 
 .progress[value="100"]::-webkit-progress-value {
-  border-top-right-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.progress[value]::-webkit-progress-bar {
+  background-color: #f5f5f5;
+  border-radius: 0.25rem;
+}
+
+base::-moz-progress-bar,
+.progress[value] {
+  background-color: #f5f5f5;
+  border-radius: 0.25rem;
 }
 
 @media screen and (min-width: 0\0) {
   .progress {
-    background-color: #eee;
+    background-color: #f5f5f5;
     border-radius: 0.25rem;
   }
   .progress-bar {
     display: inline-block;
     height: 1rem;
     text-indent: -999rem;
-    background-color: #0074d9;
-    border-top-left-radius: 0.25rem;
+    background-color: #fff;
     border-bottom-left-radius: 0.25rem;
-  }
-  .progress[width^="0"] {
-    min-width: 2rem;
-    color: #818a91;
-    background-color: transparent;
-    background-image: none;
+    border-top-left-radius: 0.25rem;
   }
   .progress[width="100%"] {
-    border-top-right-radius: 0.25rem;
     border-bottom-right-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
   }
 }
 
@@ -4698,6 +4711,11 @@ a.label:focus, a.label:hover {
 }
 
 .progress-striped[value]::-moz-progress-bar {
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-size: 1rem 1rem;
+}
+
+.progress-striped[value]::-ms-fill {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-size: 1rem 1rem;
 }
@@ -6693,6 +6711,10 @@ a.logo svg:hover {
 
 .modal--background-upload img:hover {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.modal--background-upload .progress {
+  display: none;
 }
 
 /*
