--- a/bcg/templates/home.html
+++ b/bcg/templates/home.html
@@ -1,3 +1,4 @@
+{% load cloudinary %}
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
@@ -44,11 +45,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.2/js/tether.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
   <script src="{% static 'js/vendor/jquery.inline-edit.js' %}"></script>
-  <script src="{% static 'js/vendor/fileuploader/jquery.ui.widget.js' %}"></script>
-  <script src="{% static 'js/vendor/fileuploader/jquery.iframe-transport.js' %}"></script>
-  <script src="{% static 'js/vendor/fileuploader/jquery.fileupload.js' %}"></script>
+  {% cloudinary_includes %}
+  {% cloudinary_js_config %}
   <script src="{% static 'js/ui.js' %}"></script>
-  <script src="{% static 'js/dropzone.js' %}"></script>
 </head>
 <body>
   <div class="corner-ribbon">Continue to website &rarr;</div>
@@ -98,7 +97,7 @@
 
     </section>
     <section class="social container m-y-3 text-xs-center">
-      <a href="#" class="btn btn-primary btn-lg">I'm done. Share this image</a>
+      <a href="#" class="btn btn-primary btn-lg finish">I'm done. Share this image</a>
     </section>
     <footer class="m-t-3">
       <div class="container">
@@ -121,17 +120,26 @@
           <div class="modal-body p-a-1">
             <div class="container-fluid">
               <div class="row">
-                <span class="dropzone">
-                  <span>Drag image here or click to upload</span>
-                  <!-- The file input field used as target for the file upload widget -->
-                  <input id="fileupload" type="file" name="files[]" multiple>
-                </span>
-                <!-- The global progress bar -->
-                <div id="progress" class="progress">
-                  <div class="progress-bar progress-bar-success"></div>
+                <div id='direct_upload'>
+                  <form action="{% url 'direct_upload_complete' %}" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {% cloudinary_direct_upload_field request=request %}
+                  </form>
                 </div>
 
+                <!-- <span class="dropzone"> -->
+
+                  <!-- <span>Drag image here or click to upload</span> -->
+                  <!-- The file input field used as target for the file upload widget -->
+                  <!-- <input id="fileupload" type="file" name="files[]" multiple> -->
+                <!-- </span> -->
               </div>
+
+              <progress class="progress">
+                <div class="progress">
+                  <span class="progress-bar progress-bar-success"></span>
+                </div>
+              </progress>
 
               <p class="lead text-xs-center">
                 ... or select one of ours
@@ -172,6 +180,8 @@
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+
+  <script src="{% static 'js/dropzone.js' %}"></script>
 
   </body>
 </html>
