--- a/bcg/templates/home.html
+++ b/bcg/templates/home.html
@@ -76,7 +76,7 @@
 
     <div class="artboard__wrapper artboard__wrapper--cutouts">
       <div class="artboard__actionable-item artboard__actionable-item--cutouts">
-        <img src="{% static 'img/artboard/dummy-cutout.png' %}" id="artboardCutout" class="artboard__cutouts" alt="Cutout" />
+        <img src="{% static 'img/artboard/dp-cutout4.png' %}" id="artboardCutout" class="artboard__cutouts" alt="Cutout" />
         <span class="artboard__helper-text artboard__helper-text--tl">
           Select your DP
           <svg class="icon-arrow"><use xlink:href="{% static 'img/icons/icons.svg#icon-arrow' %}"></use></svg>
@@ -153,6 +153,7 @@
                 <div class="col-xs-6 col-md-4">
                   <a href="#" class="select-background"><img src="{% static 'img/artboard/backgrounds/thumbnails/dummy-bg1.jpg' %}" alt="image" data-large-img="{% static 'img/artboard/backgrounds/dummy-bg1.jpg' %}" /></a>
                 </div>
+
               </div>
             </div>
           </div>
@@ -170,10 +171,16 @@
               <div class="row">
                 <ul class="inline-list p-a-1">
                     <li>
-                        <img src="{% static 'img/artboard/dummy-cutout-shadow.png' %}" class="modal--cutouts-selector__option" alt="Cutout" data-large-img="{% static 'img/artboard/dummy-cutout.png' %}"/>
+                        <img src="{% static 'img/artboard/dp-cutout1-shadow.png' %}" class="modal--cutouts-selector__option" alt="Cutout" data-large-img="{% static 'img/artboard/dp-cutout1.png' %}"/>
                     </li>
                     <li>
-                      <img src="{% static 'img/artboard/dummy-cutout1-shadow.png' %}" class="modal--cutouts-selector__option" alt="Cutout" data-large-img="{% static 'img/artboard/dummy-cutout1.png' %}"/>
+                      <img src="{% static 'img/artboard/dp-cutout2-shadow.png' %}" class="modal--cutouts-selector__option" alt="Cutout" data-large-img="{% static 'img/artboard/dp-cutout2.png' %}"/>
+                    </li>
+                    <li>
+                        <img src="{% static 'img/artboard/dp-cutout3-shadow.png' %}" class="modal--cutouts-selector__option" alt="Cutout" data-large-img="{% static 'img/artboard/dp-cutout3.png' %}"/>
+                    </li>
+                    <li>
+                      <img src="{% static 'img/artboard/dp-cutout4-shadow.png' %}" class="modal--cutouts-selector__option" alt="Cutout" data-large-img="{% static 'img/artboard/dp-cutout4.png' %}"/>
                     </li>
                 </ul>
               </div>
