--- a/bcg/templates/home.html
+++ b/bcg/templates/home.html
@@ -24,13 +24,13 @@
   <meta content="" property="og:url">
   <meta content="" property="og:site_name">
   <meta content="" property="og:description">
-  <meta content="{% static 'img/artboard/dummy-cutout.png' %}" property="og:image">
+  <meta content="{% static  'img/artboard/dp-cutout4.png' %}" property="og:image">
   <!-- / Twitter cards -->
   <meta content="summary_large_image" name='twitter:card'>
   <meta content="@" name='twitter:site'>
   <meta content="" name='twitter:title'>
   <meta content="" name='twitter:description'>
-  <meta content="{% static 'img/artboard/dummy-cutout.png' %}" name='twitter:image'>
+  <meta content="{% static  'img/artboard/dp-cutout4.png' %}" name='twitter:image'>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -76,8 +76,7 @@
 
     <div class="artboard__wrapper artboard__wrapper--cutouts">
       <div class="artboard__actionable-item artboard__actionable-item--cutouts">
-
-
+        <img src="{% static 'img/artboard/dp-cutout4.png' %}" id="artboardCutout" class="artboard__cutouts" alt="Cutout" />
         <span class="artboard__helper-text artboard__helper-text--tl">
           Select your DP
           <svg class="icon-arrow"><use xlink:href="{% static 'img/icons/icons.svg#icon-arrow' %}"></use></svg>
@@ -171,7 +170,18 @@
             <div class="container-fluid">
               <div class="row">
                 <ul class="inline-list p-a-1">
-      
+                    <li>
+                        <img src="{% static 'img/artboard/dp-cutout1-shadow.png' %}" class="modal--cutouts-selector__option" alt="Cutout" data-large-img="{% static 'img/artboard/dp-cutout1.png' %}"/>
+                    </li>
+                    <li>
+                      <img src="{% static 'img/artboard/dp-cutout2-shadow.png' %}" class="modal--cutouts-selector__option" alt="Cutout" data-large-img="{% static 'img/artboard/dp-cutout2.png' %}"/>
+                    </li>
+                    <li>
+                        <img src="{% static 'img/artboard/dp-cutout3-shadow.png' %}" class="modal--cutouts-selector__option" alt="Cutout" data-large-img="{% static 'img/artboard/dp-cutout3.png' %}"/>
+                    </li>
+                    <li>
+                      <img src="{% static 'img/artboard/dp-cutout4-shadow.png' %}" class="modal--cutouts-selector__option" alt="Cutout" data-large-img="{% static 'img/artboard/dp-cutout4.png' %}"/>
+                    </li>
                 </ul>
               </div>
             </div>
