--- a/bcg/templates/base.html
+++ b/bcg/templates/base.html
@@ -3,13 +3,77 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="De Geist">
+
+    <title>Book Cover Generator</title>
+    <meta name="description" content="">
+
+    <!-- // Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+
+    <!-- / Facebook Open Graph shares -->
+    <meta content="" property="og:title">
+    <meta content="" property="og:url">
+    <meta content="" property="og:site_name">
+    <meta content="" property="og:description">
+    <meta content="{% static  'img/artboard/dp-cutout4.png' %}" property="og:image">
+    <!-- / Twitter cards -->
+    <meta content="summary_large_image" name='twitter:card'>
+    <meta content="@" name='twitter:site'>
+    <meta content="" name='twitter:title'>
+    <meta content="" name='twitter:description'>
+    <meta content="{% static  'img/artboard/dp-cutout4.png' %}" name='twitter:image'>
+
+    <meta charset="utf-8">
     <title>Book Cover Generator</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     {% cloudinary_includes %}
     {% cloudinary_js_config %}
     <script>
       {% block javascript %}{% endblock %}
+      // Load Facebook
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1591616244469514',
+          xfbml      : true,
+          version    : 'v2.7'
+        });
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
     </script>
+    <script>
+    window.twttr = (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0],
+        t = window.twttr || {};
+      if (d.getElementById(id)) return t;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "https://platform.twitter.com/widgets.js";
+      fjs.parentNode.insertBefore(js, fjs);
+
+      t._e = [];
+      t.ready = function(f) {
+        t._e.push(f);
+      };
+
+      return t;
+    }(document, "script", "twitter-wjs"));
+    </script>
+
   </head>
   <body>
     {% block body %}{% endblock %}
