--- a/bcg/templates/view.html
+++ b/bcg/templates/view.html
@@ -25,11 +25,48 @@
 		  href="https://twitter.com/intent/tweet?text=Hello%20world"
 		  data-size="large">
 		Tweet</a>
+		<!-- Your share button code -->
+		<div class="fb-share-button"
+			data-href="http://www.your-domain.com/your-page.html"
+			data-layout="button_count">
+		</div>
+
+	<a class="tumblr-share-button" href="https://www.tumblr.com/share"></a>
+
 	</section>
 
 
-	<a class="tumblr-share-button" href="https://www.tumblr.com/share"></a>
+
 	<script id="tumblr-js" async src="https://assets.tumblr.com/share-button.js"></script>
+	<!-- Load Facebook SDK for JavaScript -->
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) return;
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
+	</script>
+	<!-- Load Twitter API -->
+	<script>
+	window.twttr = (function(d, s, id) {
+		var js, fjs = d.getElementsByTagName(s)[0],
+			t = window.twttr || {};
+		if (d.getElementById(id)) return t;
+		js = d.createElement(s);
+		js.id = id;
+		js.src = "https://platform.twitter.com/widgets.js";
+		fjs.parentNode.insertBefore(js, fjs);
+
+		t._e = [];
+		t.ready = function(f) {
+			t._e.push(f);
+		};
+
+		return t;
+	}(document, "script", "twitter-wjs"));
+	</script>
 
 
 {% endblock %}
