--- a/bcg/templates/base.html
+++ b/bcg/templates/base.html
@@ -21,26 +21,22 @@
     <!-- / Facebook Open Graph shares -->
     <meta content="" property="og:title">
     <meta content="" property="og:url">
-    <meta content="" property="og:site_name">
+    <meta content="Dan and Phil Go Outside" property="og:site_name">
     <meta content="" property="og:description">
-    <meta content="{% static  'img/artboard/dp-cutout4.png' %}" property="og:image">
+    <meta content="http://res.cloudinary.com/geist/image/upload/l_static:{{ cutout }}/l_static:danphil-headline.png,w_500,y_10,g_north/l_text:Open%20Sans_40_bold:{{ text|urlencode:"" }},g_south,y_50,w_500,c_fit,co_rgb:FFFFFF/w_500,h_660,c_fill/{{ version_id }}/{{ image_id }}.{{ image_extension }}" property="og:image">
     <!-- / Twitter cards -->
     <meta content="summary_large_image" name='twitter:card'>
-    <meta content="@" name='twitter:site'>
-    <meta content="" name='twitter:title'>
-    <meta content="" name='twitter:description'>
-    <meta content="{% static  'img/artboard/dp-cutout4.png' %}" name='twitter:image'>
+    <meta content="@danandphil" name='twitter:site'>
+    <meta content="Dan and Phil Go Outside" name='twitter:title'>
+    <meta content="Dan and Phil go Outside" name='twitter:description'>
+    <meta content="http://res.cloudinary.com/geist/image/upload/l_static:{{ cutout }}/l_static:danphil-headline.png,w_500,y_10,g_north/l_text:Open%20Sans_40_bold:{{ text|urlencode:"" }},g_south,y_50,w_500,c_fit,co_rgb:FFFFFF/w_500,h_660,c_fill/{{ version_id }}/{{ image_id }}.{{ image_extension }}" name='twitter:image'>
 
-    <meta charset="utf-8">
-    <title>Book Cover Generator</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     {% cloudinary_includes %}
     {% cloudinary_js_config %}
     <script>
       {% block javascript %}{% endblock %}
     </script>
-
-
   </head>
   <body>
     {% block body %}{% endblock %}
