Better error text

--- a/bcg/templates/500.html
+++ b/bcg/templates/500.html
@@ -27,5 +27,5 @@ b {
 <div class="container">
   <img src="http://res.cloudinary.com/geist/image/upload/v1469520432/static/dp-cutout2.png" width="200"/>
   <h1>Eh, something went wrong</h1>
-  <b>500 Error</b>
+  <b>Internal server error (500)</b>
 </div>
