--- a/bcg/templates/404.html
+++ b/bcg/templates/404.html
@@ -27,5 +27,5 @@ b {
 <div class="container">
   <img src="http://res.cloudinary.com/geist/image/upload/v1469520432/static/dp-cutout1.png" width="200"/>
   <h1>We're lost</h1>
-  <b>404 Error</b>
+  <b>Not found (404)</b>
 </div>
