--- a/bcg/static/css/main.css
+++ b/bcg/static/css/main.css
@@ -7100,10 +7100,7 @@ a.logo svg:hover {
 }
 
 .artboard--final {
-  max-width: auto;
-  min-height: auto;
-  width: 250px;
-  height: 330px;
+  border: 4px solid #d9ebf1;
 }
 
 .artboard__wrapper {
@@ -7116,24 +7113,24 @@ a.logo svg:hover {
 .artboard__wrapper--title {
   display: block;
   margin: 1rem auto;
-  height: 66px;
+  height: 92.4px;
   top: 0;
 }
 
 .artboard__wrapper--background-upload {
   height: 32px;
-  top: calc(66px + 2* 1rem);
+  top: calc(92.4px + 2* 1rem);
   z-index: 400;
 }
 
 .artboard__wrapper--cutouts {
   height: 396px;
-  top: calc(66px + 4 * 1rem + 32px);
+  top: calc(92.4px + 4 * 1rem + 32px);
 }
 
 .artboard__wrapper--subtitle {
-  top: calc(66px + 4 * 1rem + 32px + 660px * .60);
-  height: calc(660px - (66px + 4 * 1rem + 32px + 660px * .60 + 8px));
+  top: calc(92.4px + 4 * 1rem + 32px + 660px * .60);
+  height: calc(660px - (92.4px + 4 * 1rem + 32px + 660px * .60 + 8px));
 }
 
 .artboard__actionable-item {
@@ -7146,11 +7143,14 @@ a.logo svg:hover {
 }
 
 .artboard__actionable-item--background-upload {
-  width: 32px;
+  width: 36px;
 }
 
 .artboard__actionable-item--background-upload svg.icon-camera {
   fill: rgba(255, 255, 255, 0.7);
+  padding: 2px;
+  border-radius: 0.25rem;
+  background-color: #295E6F;
 }
 
 .artboard__actionable-item--background-upload:hover {
@@ -7181,11 +7181,15 @@ a.logo svg:hover {
   display: block;
 }
 
+.artboard__icon {
+  display: inline-block;
+}
+
 .inline-text-edit {
   font-family: "Open Sans", "Akzidenz", sans-serif;
   font-weight: 700;
   padding: 1px;
-  height: calc(660px - (66px + 4 * 1rem + 32px + 660px * .60 + 8px));
+  height: calc(660px - (92.4px + 4 * 1rem + 32px + 660px * .60 + 8px));
   font-size: 28px;
   color: white;
   display: block;
