--- a/_scss/sections/artboard/_artboard.scss
+++ b/_scss/sections/artboard/_artboard.scss
@@ -3,16 +3,23 @@ $artboard-width:        500px;
 $artboard-height:       $artboard-width * $artboard-ratio;
 $artboard-title-height: $artboard-height * 0.14;
 
-$artboard-subtitle-height: calc(#{$artboard-height} - (#{$artboard-title-height} + 4 * #{$spacer-y} + #{$icon-size} + #{$artboard-height} * .60 + 8px));
+$artboard-subtitle-height: calc(#{$artboard-height} - (#{$artboard-title-height} + 4 * #{$spacer-y} + #{$icon-size} + #{$artboard-height} * .56 + 8px));
 
 
 // Z-index (Bootstrap starts at 1000)
 $z-index-bg-upload:     400;
 
 .artboard {
-  // Optimise this for mobile
   max-width: $artboard-width;
   min-height: $artboard-height;
+  @include media-breakpoint-up(md) {
+    max-width: none;
+    min-height: initial;
+    width: $artboard-width;
+    height: $artboard-height;
+  }
+
+  // Optimise this for mobile
   margin: 0 auto;
   border: 4px solid white;
   background-color: $brand-secondary;
@@ -26,6 +33,10 @@ $z-index-bg-upload:     400;
 
   &--final {
     border: 4px solid lighten($brand-primary,60%);
+    display: block;
+    max-width: 100%;
+    height: auto;
+    min-height: initial;
   }
 
   // Artboard wrappers take care of placement/sizing of the element on the artboard
@@ -54,7 +65,7 @@ $z-index-bg-upload:     400;
     }
 
     &--subtitle {
-        top: calc(#{$artboard-title-height} + 4 * #{$spacer-y} + #{$icon-size} + #{$artboard-height} * .60);
+        top: calc(#{$artboard-title-height} + 4 * #{$spacer-y} + #{$icon-size} + #{$artboard-height} * .56);
         height: $artboard-subtitle-height;
     }
   }
@@ -110,6 +121,10 @@ $z-index-bg-upload:     400;
 
   &__cutouts {
     height:  $artboard-height * .60;
+    // Fit them in on smaller displays
+    @include media-breakpoint-down(md) {
+      height: $artboard-height * .55;
+    }
     width: auto;
     display: block;
   }
@@ -117,4 +132,12 @@ $z-index-bg-upload:     400;
   &__icon {
     display: inline-block;
   }
+}
+
+.toc {
+  display: block;
+  clear: both;
+  max-width: 300px;
+  margin: $spacer-x auto;
+  font-style: italic;
 }
