--- a/bcg/templates/home.html
+++ b/bcg/templates/home.html
@@ -56,7 +56,7 @@
   <script src="{% static 'js/ui.js' %}"></script>
 </head>
 <body>
-  <div class="corner-ribbon">Continue to website &rarr;</div>
+  <div class="corner-ribbon">Buy the book &rarr;</div>
   <header class="masthead container p-y-1">
       <div class="row">
         <div class="col-xs-12">
