--- a/bcg/templates/view.html
+++ b/bcg/templates/view.html
@@ -58,6 +58,13 @@
 		</div>
 	</section>
 
+	<section class="container">
+		<div class="row p-y-1">
+			<div class="col-xs-12 text-xs-center">
+				<a href="/" class="btn btn-success btn-lg">Make another cover &rarr;</a>
+			</div>
+		</div>
+	</section>
 
 	<!-- Load Tumblr -->
 	<script id="tumblr-js" async src="https://assets.tumblr.com/share-button.js"></script>
