--- a/bcg/static/css/main.css
+++ b/bcg/static/css/main.css
@@ -7194,6 +7194,7 @@ a.logo svg:hover {
   display: block;
   padding: 0 1rem;
   line-height: 40px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
 }
 
 .artboard__title {
@@ -7231,6 +7232,7 @@ a.logo svg:hover {
   font-family: "Open Sans", "Akzidenz", sans-serif;
   font-weight: 700;
   padding: 1px;
+  margin-bottom: 0;
   min-height: 100px;
   font-size: 40px;
   line-height: 40px;
