Add environment variable SITE_URL

--- a/bcg/templates/view.html
+++ b/bcg/templates/view.html
@@ -25,6 +25,8 @@
 				</div>
 			</div>
 	</section>
+	<pre>URI: {{ request.build_absolute_uri }}</pre>
+	<pre>SITE_URL: {{ site_url }}</pre>
 	<section class="share-artboard m-y-2">
 		<div class="container">
 			<div class="row">
