--- a/bcg/templates/view.html
+++ b/bcg/templates/view.html
@@ -71,7 +71,7 @@
 	<section class="container">
 		<div class="row p-y-1">
 			<div class="col-xs-12 text-xs-center">
-				<a href="/" class="btn btn-success btn-lg">Make another cover &#8617;</a>
+				<a href="{{ site_url }}" class="btn btn-success btn-lg">Make another cover &#8617;</a>
 			</div>
 		</div>
 		<div class="row p-y-1">
